--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.paypal.sdk/rest-api-sdk
     implementation group: 'com.paypal.sdk', name: 'rest-api-sdk', version: '1.14.0'
 
+    // https://mvnrepository.com/artifact/com.twilio.sdk/twilio
+    implementation group: 'com.twilio.sdk', name: 'twilio', version: '8.29.1'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
