--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ db.url=jdbc:mariadb://eporqep6b4b8ql12.chr7pe7iynqr.eu-west-1.rds.amazonaws.com/
 db.user=r2wq48u354q2hzz9
 db.pass=r2snuzhozjraxhsz
 
+twilio.sid=AC9542e149cc3cc88664a34009b866fbf9
+twilio.auth.token=e218335a58aa23372bac2190f3364ed8
+twilio.phone.number=+18304838766
+
 server.error.include-stacktrace=never
 
 cloud_name=tddvjavaforum
